--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>InicioSesionController</servlet-name>
         <servlet-class>com.twg.controladores.InicioSesionController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>PaginaInicioController</servlet-name>
+        <servlet-class>com.twg.controladores.PaginaInicioController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UsuariosController</servlet-name>
         <url-pattern>/UsuariosController</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>InicioSesionController</servlet-name>
         <url-pattern>/InicioSesionController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PaginaInicioController</servlet-name>
+        <url-pattern>/PaginaInicioController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
