--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,6 +9,10 @@
         <servlet-class>com.twg.controladores.InicioSesionController</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>PaginaInicioController</servlet-name>
+        <servlet-class>com.twg.controladores.PaginaInicioController</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>PersonasController</servlet-name>
         <servlet-class>com.twg.controladores.PersonasController</servlet-class>
     </servlet>
@@ -19,6 +23,10 @@
     <servlet-mapping>
         <servlet-name>InicioSesionController</servlet-name>
         <url-pattern>/InicioSesionController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PaginaInicioController</servlet-name>
+        <url-pattern>/PaginaInicioController</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>PersonasController</servlet-name>
