--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>PersonasController</servlet-name>
         <servlet-class>com.twg.controladores.PersonasController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>EstadosController</servlet-name>
+        <servlet-class>com.twg.controladores.EstadosController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UsuariosController</servlet-name>
         <url-pattern>/UsuariosController</url-pattern>
@@ -31,6 +35,10 @@
     <servlet-mapping>
         <servlet-name>PersonasController</servlet-name>
         <url-pattern>/PersonasController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EstadosController</servlet-name>
+        <url-pattern>/EstadosController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
