Corrección de merge

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,6 +24,10 @@
         <servlet-name>EstadosController</servlet-name>
         <servlet-class>com.twg.controladores.EstadosController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>PermisosController</servlet-name>
+        <servlet-class>com.twg.controladores.PermisosController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UsuariosController</servlet-name>
         <url-pattern>/UsuariosController</url-pattern>
@@ -47,6 +51,10 @@
     <servlet-mapping>
         <servlet-name>EstadosController</servlet-name>
         <url-pattern>/EstadosController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PermisosController</servlet-name>
+        <url-pattern>/PermisosController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
