Modificaciones en creación de proyecto.
Se levanta la persistencia y demás clases necesarias para el almacenamiento de datos de proyecto.
Se crea referencia a calendario Bootstrap.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,6 +28,10 @@
         <servlet-name>PermisosController</servlet-name>
         <servlet-class>com.twg.controladores.PermisosController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ProyectosController</servlet-name>
+        <servlet-class>com.twg.controladores.ProyectosController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UsuariosController</servlet-name>
         <url-pattern>/UsuariosController</url-pattern>
@@ -55,6 +59,10 @@
     <servlet-mapping>
         <servlet-name>PermisosController</servlet-name>
         <url-pattern>/PermisosController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProyectosController</servlet-name>
+        <url-pattern>/ProyectosController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
