--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <filter>
+        <filter-name>FiltroSesion</filter-name>
+        <filter-class>com.twg.utilidades.FiltroSesion</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FiltroSesion</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>UsuariosController</servlet-name>
         <servlet-class>com.twg.controladores.UsuariosController</servlet-class>
@@ -36,6 +44,10 @@
         <servlet-name>ActividadesController</servlet-name>
         <servlet-class>com.twg.controladores.ActividadesController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CerrarSesionController</servlet-name>
+        <servlet-class>com.twg.controladores.CerrarSesionController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UsuariosController</servlet-name>
         <url-pattern>/UsuariosController</url-pattern>
@@ -71,6 +83,10 @@
     <servlet-mapping>
         <servlet-name>ActividadesController</servlet-name>
         <url-pattern>/ActividadesController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CerrarSesionController</servlet-name>
+        <url-pattern>/CerrarSesionController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
