--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,29 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
+file.reference.commons-beanutils-1.9.0.jar=lib/commons-beanutils-1.9.0.jar
+file.reference.commons-codec-1.5.jar=lib/commons-codec-1.5.jar
+file.reference.commons-collections-3.2.1.jar=lib/commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=lib/commons-digester-2.1.jar
+file.reference.commons-lang3-3.1.jar=lib/commons-lang3-3.1.jar
+file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
+file.reference.dynamicreports-adhoc-4.1.0.jar=lib/dynamicreports-adhoc-4.1.0.jar
+file.reference.dynamicreports-core-4.1.0.jar=lib/dynamicreports-core-4.1.0.jar
+file.reference.dynamicreports-googlecharts-4.1.0.jar=lib/dynamicreports-googlecharts-4.1.0.jar
+file.reference.ecj-4.3.1.jar=lib/ecj-4.3.1.jar
+file.reference.itext-2.1.7.jar=lib/itext-2.1.7.jar
+file.reference.jackson-annotations-2.1.4.jar=lib/jackson-annotations-2.1.4.jar
+file.reference.jackson-core-2.1.4.jar=lib/jackson-core-2.1.4.jar
+file.reference.jackson-databind-2.1.4.jar=lib/jackson-databind-2.1.4.jar
+file.reference.jasperreports-6.2.0.jar=lib/jasperreports-6.2.0.jar
+file.reference.jcommon-1.0.23.jar=lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19.jar
+file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
+file.reference.jxl-2.6.10.jar=lib/jxl-2.6.10.jar
+file.reference.log4j-1.2.14.jar=lib/log4j-1.2.14.jar
+file.reference.poi-3.10.1.jar=lib/poi-3.10.1.jar
+file.reference.xml-apis-1.3.04.jar=lib/xml-apis-1.3.04.jar
+file.reference.xml-apis-ext-1.3.04.jar=lib/xml-apis-ext-1.3.04.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +67,29 @@ jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.jstl.classpath}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.commons-beanutils-1.9.0.jar}:\
+    ${file.reference.commons-codec-1.5.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-lang3-3.1.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.dynamicreports-adhoc-4.1.0.jar}:\
+    ${file.reference.dynamicreports-core-4.1.0.jar}:\
+    ${file.reference.dynamicreports-googlecharts-4.1.0.jar}:\
+    ${file.reference.ecj-4.3.1.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.jackson-annotations-2.1.4.jar}:\
+    ${file.reference.jackson-core-2.1.4.jar}:\
+    ${file.reference.jackson-databind-2.1.4.jar}:\
+    ${file.reference.jasperreports-6.2.0.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.jxl-2.6.10.jar}:\
+    ${file.reference.log4j-1.2.14.jar}:\
+    ${file.reference.poi-3.10.1.jar}:\
+    ${file.reference.xml-apis-1.3.04.jar}:\
+    ${file.reference.xml-apis-ext-1.3.04.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
