Elementos base para la funcionalidad de carga de archivos.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -52,6 +52,10 @@
         <servlet-name>ActividadesPorEstadoController</servlet-name>
         <servlet-class>com.twg.controladores.ActividadesPorEstadoController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ArchivosController</servlet-name>
+        <servlet-class>com.twg.controladores.ArchivosController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UsuariosController</servlet-name>
         <url-pattern>/UsuariosController</url-pattern>
@@ -95,6 +99,10 @@
     <servlet-mapping>
         <servlet-name>ActividadesPorEstadoController</servlet-name>
         <url-pattern>/ActividadesPorEstadoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ArchivosController</servlet-name>
+        <url-pattern>/ArchivosController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
